--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
 													<div class="social-networks">
 														<a target="_blank" href="https://www.facebook.com/vitorbarao88"><i class="fa fa-facebook"></i></a>
 														<a target="_blank" href="https://www.instagram.com/vitorbarao/"><i class="fa fa-instagram"></i></a>
-														<a target="_blank" href="#"><i class="fa fa-linkedin"></i></a>
+														<a target="_blank" href="#"><i class="fa fa-linkedin"></i>https://www.linkedin.com/in/vitor-bar%C3%A3o-b362b0b8/</a>
 													</div>
 												</div>
 											</div>
