--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
 													<div class="social-networks">
 														<a target="_blank" href="https://www.facebook.com/senhoritalina"><i class="fa fa-facebook"></i></a>
 														<a target="_blank" href="https://www.instagram.com/lilo.think/"><i class="fa fa-instagram"></i></a>
-														<a target="_blank" href="#"><i class="fa fa-linkedin"></i></a>
+														<a target="_blank" href="https://www.linkedin.com/in/lina-lopes-bb4892113/"><i class="fa fa-linkedin"></i></a>
 													</div>
 												</div>
 											</div>
@@ -424,7 +424,7 @@
 													<div class="social-networks">
 														<a target="_blank" href="https://www.facebook.com/victor.farinella"><i class="fa fa-facebook"></i></a>
 														<a target="_blank" href="https://www.instagram.com/victorfarinella/"><i class="fa fa-instagram"></i></a>
-														<a target="_blank" href="www.linkedin.com/in/victorfarinella"><i class="fa fa-linkedin"></i></a>
+														<a target="_blank" href="https://www.linkedin.com/in/victorfarinella"><i class="fa fa-linkedin"></i></a>
 													</div>
 												</div>
 											</div>
@@ -447,7 +447,7 @@
 													<div class="social-networks">
 														<a target="_blank" href="https://www.facebook.com/vitorbarao88"><i class="fa fa-facebook"></i></a>
 														<a target="_blank" href="https://www.instagram.com/vitorbarao/"><i class="fa fa-instagram"></i></a>
-														<a target="_blank" href="#"><i class="fa fa-linkedin"></i>https://www.linkedin.com/in/vitor-bar%C3%A3o-b362b0b8/</a>
+														<a target="_blank" href="https://www.linkedin.com/in/vitor-bar%C3%A3o-b362b0b8/"><i class="fa fa-linkedin"></i></a>
 													</div>
 												</div>
 											</div>
