--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
 													<div class="social-networks">
 														<a target="_blank" href="https://www.facebook.com/senhoritalina"><i class="fa fa-facebook"></i></a>
 														<a target="_blank" href="https://www.instagram.com/lilo.think/"><i class="fa fa-instagram"></i></a>
-														<a target="_blank" href="https://www.linkedin.com/in/lina-lopes-bb4892113/"><i class="fa fa-linkedin"></i></a>
+														<a target="_blank" href="https://www.linkedin.com/in/lina-lopes/"><i class="fa fa-linkedin"></i></a>
 													</div>
 												</div>
 											</div>
