--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
 							<div class="col-sm-4">
 								<div class="team-member style-1">
 									<div class="photo">
-										<img src="images/team_380x510.jpg" alt="Victor Farinella" />
+										<img src="images/victor.jpg" alt="Victor Farinella" />
 									</div>
 									<div class="overlay"></div>
 									<div class="info text-center">
