--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
 							<div class="col-sm-4">
 								<div class="team-member style-1">
 									<div class="photo">
-										<img src="images/team_380x510.jpg" alt="Vitor Barão" />
+										<img src="images/vitor.jpg" alt="Vitor Barão" />
 									</div>
 									<div class="overlay"></div>
 									<div class="info text-center">
