--- a/index.html
+++ b/index.html
@@ -230,9 +230,12 @@
                                 <div class="col-sm-12">
                                     <div class="image-slider" data-auto-play="true" data-desktop="1" data-laptop="1" data-tablet="1" data-mobile="1">
                                         <div class="image">
-                                            <img src="images/image_1110x530.jpg" alt="Slide Image" />
+                                            <img src="images/BioLiloLab_1.jpg" alt="Slide Image" />
                                         </div>
                                         <div class="image">
+                                            <img src="images/BioLiloLab_2.jpg" alt="Slide Image" />
+                                        </div>
+					<div class="image">
                                             <img src="images/image_1110x530.jpg" alt="Slide Image" />
                                         </div>
                                     </div>
