--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                                             <img src="images/BioLiloLab_2.jpg" alt="Slide Image" />
                                         </div>
 					<div class="image">
-                                            <img src="images/image_1110x530.jpg" alt="Slide Image" />
+                                            <img src="images/BioLiloLab_3.jpg" alt="Slide Image" />
                                         </div>
                                     </div>
                                 </div>
