--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
 		<link rel="shortcut icon" href="images/favicon.png"/>
-		<title>BioLiloLab &#8211; Prototipagem com Propósito</title>
+		<title>BioLiloLab &#8211; Bioprototipagem com Propósito</title>
 
 		<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" media="all"/>
 		<link rel="stylesheet" href="css/font-awesome.min.css" type="text/css" media="all" />
