--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 												 data-whitespace="normal" data-type="text" data-responsive_offset="on" data-fontsize="['22','22','17','15']"
 												 data-frames='[{"delay":1700,"speed":2000,"sfxcolor":"#ffffff","sfx_effect":"blockfrombottom","frame":"0","from":"z:0;","to":"o:1;","ease":"Power4.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
 												 data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]"
-												 data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]">Prototipagem com Propósito  
+												 data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]">Bioprototipagem com propósito  
 											</div>
 
 											<!-- LAYER NR. 7 -->
