css changes, contact button

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<link rel="stylesheet" href="css/owl.transitions.css" type="text/css" media="all"/>
 		<link rel="stylesheet" href="css/style.css" type="text/css" media="all"/>
 		<link rel="stylesheet" href="css/custom.css" type="text/css" media="all"/>
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
 		<link href="//fonts.googleapis.com/css?family=Work+Sans:100,200,300,400,500,600,700,800,900%7CLibre+Baskerville:400,400i,700" rel="stylesheet"/>
 		<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -42,8 +43,8 @@
 									<div class="branding">
 										<div class="branding__logo">
 											<a href="#">
-												<img src="images/logo_light.png" alt="Moody" class="main-logo" />
-												<img src="images/logo.png" alt="Moody" class="dark-logo" />
+												<img src="images/logo_light.png" alt="Bio Lilo Lab" class="main-logo" />
+												<img src="images/logo.png" alt="Bio Lilo Lab" class="dark-logo" />
 											</a>
 										</div>
 									</div>
@@ -179,16 +180,18 @@
 											</div>
 
 											<!-- LAYER NR. 7 -->
-											<div class="tp-caption rev-btn" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" 
-												 data-y="['middle','middle','middle','middle']" data-voffset="['70','70','63','83']" data-width="220"
-												 data-height="55" data-whitespace="nowrap" data-type="button" data-responsive_offset="on"
-												 data-responsive="off"
-												 data-frames='[{"delay":2700,"speed":1500,"frame":"0","from":"y:50px;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"0","ease":"Linear.easeNone","to":"o:1;rX:0;rY:0;rZ:0;z:0;","style":"c:rgb(255,255,255);bg:rgba(255,255,255,0);"}]'
-												 data-textAlign="['center','center','center','center']" data-paddingtop="[0,0,0,0]" data-paddingright="[20,20,20,20]"
-												 data-paddingbottom="[0,0,0,0]" data-paddingleft="[20,20,20,20]">
+											<a href="#Contato">
+												<div class="tp-caption rev-btn" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" 
+													data-y="['middle','middle','middle','middle']" data-voffset="['70','70','63','83']" data-width="220"
+													data-height="55" data-whitespace="nowrap" data-type="button" data-responsive_offset="on"
+													data-responsive="off"
+													data-frames='[{"delay":2700,"speed":1500,"frame":"0","from":"y:50px;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"0","ease":"Linear.easeNone","to":"o:1;rX:0;rY:0;rZ:0;z:0;","style":"c:rgb(255,255,255);bg:rgba(255,255,255,0);"}]'
+													data-textAlign="['center','center','center','center']" data-paddingtop="[0,0,0,0]" data-paddingright="[20,20,20,20]"
+													data-paddingbottom="[0,0,0,0]" data-paddingleft="[10,10,10,10]">
 
-													<span class="btn-icon left-icon icon-compass"></span>entre em contato 
-											</div>
+														<span class="btn-icon left-icon icon-compass"></span>entre em contato
+												</div>
+											</a>
 										</li>
 									</ul>
 								</div>
@@ -196,8 +199,8 @@
 						</div>
 					</div>
 				</div>
-				<div class="section pt-12 pb-10" id="Sobre">
-                    <div class="section section-bg-26 background-marque to-left pt-19 pb-11">
+				<div class="section pt-12" id="Sobre">
+                    <div class="section section-bg-26 background-marque to-left pt-5 pb-11">
 					<div class="container-fluid">
 						<div class="row">
 							<div class="col-sm-12">
@@ -251,11 +254,11 @@
 								<div class="text-center">
 									<h3 class="heading small primary-color"> NOSSOS PROJETOS</h3>
 									<div class="mb-3"></div>
-									<h3 class="heading"> 
+									<h3 class="heading text-uppercase"> 
 										 Projetos Internos
 									</h3>
 									<div class="mb-3"></div>
-									<p>Projetos de prototipagem e desprototipagem em biomateriais no estado líquido, sólido e gasoso :)</p>
+									<p>Projetos de prototipagem e desprototipagem em biomateriais<br> no estado líquido, sólido e gasoso :)</p>
 									<div class="mb-8"></div>
 								</div>
 							</div>
@@ -309,9 +312,8 @@
 						<div class="row">
 							<div class="col-sm-8 offset-sm-2">
 								<div class="text-center">
-									<h3 class="heading small primary-color"> CLUBE</h3>
 									<div class="mb-3"></div>
-									<h3 class="heading white">Clube BioLiloLab</h3>
+									<h3 class="heading white text-uppercase">Clube BioLiloLab</h3>
 									<div class="mb-3"></div>
 									<p class="white">Faça parte de uma uma ciência mais experimental ;)</p>
 									<div class="mb-8"></div>
@@ -323,7 +325,7 @@
 								<div class="pricing style-1">
 									<div class="inner">
 										<div class="pricing-header">
-											<h5 class="title">Infra-estrutura</h5>
+											<h5 class="title text-uppercase">Infra-estrutura</h5>
 										</div>
 										<div class="pricing-content">
 											<ul class="pricing-list">
@@ -340,14 +342,14 @@
 								<div class="pricing style-1">
 									<div class="inner">
 										<div class="pricing-header">
-											<h5 class="title">Orientação</h5>
+											<h5 class="title text-uppercase">Orientação</h5>
 										</div>
 										<div class="pricing-content">
 											<ul class="pricing-list">
 												<li><i class="fa fa-check primary-color"></i><span>Treinamento para uso do laboratório</span></li>
 												<li><i class="fa fa-check primary-color"></i><span>Mentoria em rede</span></li>
 												<li><i class="fa fa-check primary-color"></i><span>Ambiente maker</span></li>
-                                                <li><i class="fa fa-check primary-color"></i><span>Café !</span></li>
+                                                <li><i class="fa fa-check primary-color"></i><span>Café!</span></li>
 											</ul>
 										</div>
 									</div>
@@ -357,7 +359,7 @@
 								<div class="pricing style-1 pricing-featured">
 									<div class="inner">
 										<div class="pricing-header">
-											<h5 class="title">Clube</h5>
+											<h5 class="title text-uppercase">Clube</h5>
 											<div class="price-wrap">
 												<div class="price-wrap-inner">
 													<h5 class="price">R$5.000,00</h5>
@@ -378,12 +380,12 @@
 					</div>
 				</div>
                 
-                <div class="section border-bottom pt-10 pb-10"   id="Equipe">
+                <div class="section border-bottom pt-10 pb-10" id="Equipe">
                     <div class="container">
 						<div class="row">
 							<div class="col-sm-12">
 								<div class="text-center">
-									<h3 class="heading fw-normal fz-34"> Equipe </h3>
+									<h3 class="heading text-uppercase">Equipe</h3>
 									<div class="mb-7"></div>
 								</div>
 							</div>
