--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-sm-4">
+<!-- 							<div class="col-sm-4">
 								<div class="team-member style-1">
 									<div class="photo">
 										<img src="images/vitor.jpg" alt="Vitor Barão" />
@@ -459,7 +459,7 @@
 										</div>
 									</div>
 								</div>
-							</div>
+							</div> -->
 						</div>
 					</div>
             </div> 
