--- a/index.html
+++ b/index.html
@@ -437,29 +437,29 @@
 									</div>
 								</div>
 							</div>
-<!-- 							<div class="col-sm-4">
+							<div class="col-sm-4">
 								<div class="team-member style-1">
 									<div class="photo">
-										<img src="images/vitor.jpg" alt="Vitor Barão" />
+										<img src="images/eduardo.jpg" alt="Eduardo Padilha" />
 									</div>
 									<div class="overlay"></div>
 									<div class="info text-center">
 										<div class="info-inner">
 											<div class="info-wrap">
-												<h3 class="name">Vitor Barão</h3>
-												<div class="position">Plantrix</div>
+												<h3 class="name">Eduardo Padilha</h3>
+												<div class="position">Open Science</div>
 												<div class="info-footer">
 													<div class="social-networks">
-														<a target="_blank" href="https://www.facebook.com/vitorbarao88"><i class="fa fa-facebook"></i></a>
-														<a target="_blank" href="https://www.instagram.com/vitorbarao/"><i class="fa fa-instagram"></i></a>
-														<a target="_blank" href="https://www.linkedin.com/in/vitor-bar%C3%A3o-b362b0b8/"><i class="fa fa-linkedin"></i></a>
+														<a target="_blank" href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a>
+														<a target="_blank" href="https://www.instagram.com/"><i class="fa fa-instagram"></i></a>
+														<a target="_blank" href="https://www.linkedin.com//"><i class="fa fa-linkedin"></i></a>
 													</div>
 												</div>
 											</div>
 										</div>
 									</div>
 								</div>
-							</div> -->
+							</div>
 						</div>
 					</div>
             </div> 
