--- a/index.html
+++ b/index.html
@@ -450,9 +450,9 @@
 												<div class="position">Open Science</div>
 												<div class="info-footer">
 													<div class="social-networks">
-														<a target="_blank" href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a>
-														<a target="_blank" href="https://www.instagram.com/"><i class="fa fa-instagram"></i></a>
-														<a target="_blank" href="https://www.linkedin.com//"><i class="fa fa-linkedin"></i></a>
+														<a target="_blank" href="https://www.facebook.com/eduardo.padilha.940"><i class="fa fa-facebook"></i></a>
+														<a target="_blank" href="https://www.instagram.com/padilhaeduardo/"><i class="fa fa-instagram"></i></a>
+														<a target="_blank" href="https://br.linkedin.com/in/eduardo-padilha-antonio-3a2484116"><i class="fa fa-linkedin"></i></a>
 													</div>
 												</div>
 											</div>
