--- a/index.html
+++ b/index.html
@@ -295,8 +295,8 @@
 											</div>
 											<div class="back">
 												<div class="content-wrap">
-													<h4 class="heading">PLANTRIX</h4>
-													<div class="text">É um sistema portátil de experimentação e educação botânica, capaz de mimetizar biomas diversos, através de um sistema eletrônico de monitoramento e regulação das condições ambientais.</div>
+													<h4 class="heading">BIOVOLT</h4>
+													<div class="text">É um material a base de fungos e bactérias alimentados por óxido de grafeno. Esta experiência toda para criar um material flexível, condutivo, biológico, biodegradável, biocoisa que corre elétrons!</div>
 													<a class="button rotate-box-btn button-white style-text" >Venha Conhecer</a>
 												</div>
 											</div>
