--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 								<div class="rotate-box style-1">
 									<div class="flipper to-top">
 										<div class="thumb-wrap">
-											<div class="front" data-image="images/plantrix.png">
+											<div class="front" data-image="images/biovolt.png">
 												<div class="content-wrap">
 													<h4 class="heading"></h4>
 												</div>
