--- a/index.html
+++ b/index.html
@@ -268,16 +268,16 @@
 								<div class="rotate-box style-1">
 									<div class="flipper to-top">
 										<div class="thumb-wrap">
-											<div class="front" data-image="images/biobloco.png">
+											<div class="front" data-image="images/microbiologia.jpg">
 												<div class="content-wrap">
 													<h4 class="heading"></h4>
 												</div>
 											</div>
 											<div class="back">
 												<div class="content-wrap">
-													<h4 class="heading">BIOBLOCO</h4>
-													<div class="text">Biomateriais de matrizes biológicas associadas a fontes de matéria prima renovável para obter materiais com propriedades inovadoras e ambientalmente amigáveis.</div>
-													<a class="button rotate-box-btn button-white style-text" >Venha Conhecer</a>
+													<h4 class="heading">MICROBIOLOGIA PARA ARTISTAS</h4>
+													<div class="text">Microbiologia para Artistas e interessados em geral para a experimentação criativa em bioarte.</div>
+													<a href="http://microbiologia.biolilolab.com" class="button rotate-box-btn button-white style-text" >Clique aqui para conhecer</a>
 												</div>
 											</div>
 										</div>
@@ -391,7 +391,7 @@
 							</div>
 						</div>
 						<div class="row">
-							<div class="col-sm-4">
+							<div class="col-sm-6">
 								<div class="team-member style-1">
 									<div class="photo">
 										<img src="images/lina.jpg" alt="Lina Lopes" />
@@ -414,30 +414,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-sm-4">
-								<div class="team-member style-1">
-									<div class="photo">
-										<img src="images/victor.jpg" alt="Victor Farinella" />
-									</div>
-									<div class="overlay"></div>
-									<div class="info text-center">
-										<div class="info-inner">
-											<div class="info-wrap">
-												<h3 class="name">Victor Farinella</h3>
-												<div class="position">BioBloco</div>
-												<div class="info-footer">
-													<div class="social-networks">
-														<a target="_blank" href="https://www.facebook.com/victor.farinella"><i class="fa fa-facebook"></i></a>
-														<a target="_blank" href="https://www.instagram.com/victorfarinella/"><i class="fa fa-instagram"></i></a>
-														<a target="_blank" href="https://www.linkedin.com/in/victorfarinella"><i class="fa fa-linkedin"></i></a>
-													</div>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="col-sm-4">
+							<div class="col-sm-6">
 								<div class="team-member style-1">
 									<div class="photo">
 										<img src="images/eduardo.jpg" alt="Eduardo Padilha" />
