--- a/_pages/en.html
+++ b/_pages/en.html
@@ -26,12 +26,12 @@ projetos3: (un)prototyping projects on biomaterials<br> in the solid, liquid and
 
 microbiologia1: MICROBIOLOGY FOR ARTISTS
 microbiologia2: Microbiology for Artists and interested in general for creative experimentation in bio art.
-linkMicrobiologia: http://microbiologia.biolilolab.com
+linkMicrobiologia: http://microbiologia.biolilolab.com/en
 microbiologia3: Click here to know more
 
 vagina1: ARTIST'S VAGINAS
 vagina2: What happens when a group of women appropriates of their own intimate microbiota to make art? 
-linkVagina: http://artistsvaginas.biolilolab.com
+linkVagina: http://artistsvaginas.biolilolab.com/en
 vagina3: Click here to know more
 
 biovolt1: BIOVOLT
