--- a/_pages/en.html
+++ b/_pages/en.html
@@ -31,7 +31,7 @@ microbiologia3: Click here to know more
 
 vagina1: ARTIST'S VAGINAS
 vagina2: What happens when a group of women appropriates of their own intimate microbiota to make art? 
-linkVagina: http://artistsvaginas.biolilolab.com/en
+linkVagina: http://vaginas.biolilolab.com/en
 vagina3: Click here to know more
 
 biovolt1: BIOVOLT
