--- a/_pages/pt.html
+++ b/_pages/pt.html
@@ -31,7 +31,7 @@ microbiologia3: Clique aqui para conhecer
 
 vagina1: ARTIST'S VAGINAS
 vagina2: O que acontece quando um grupo de mulheres se apropriam da sua microbiota íntima para fazer arte?
-linkVagina: http://artistsvaginas.biolilolab.com
+linkVagina: http://vaginas.biolilolab.com
 vagina3: Clique aqui para conhecer
 
 biovolt1: BIOVOLT
